--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<section>
 			<div class="ShrinkWrap">
 				<p>
-				An <b>AND Gate</b>performs logical Conjunction - It behsves like a truthtable , when one or both inputs are <b>Low</b> then it results as <b>0</b> , otherwise it results as <b>1</b>. 
+				An <b>AND Gate</b> performs logical Conjunction - It behsves like a truthtable , when one or both inputs are <b>Low</b> then it results as <b>0</b> , otherwise it results as <b>1</b>. 
 			</p>
 					
 			<div class="Canvas" style="width: 9rem; height: 17rem;">
@@ -524,14 +524,10 @@
 				<h2>logic-gate-simulator<h2>
 				<h3>Implementing AND , OR  , XOR Gates in Pure HTML & CSS .</h3>
 				<p>
-					LGS is an experiment demonstrating the power of CSS selectors.  Usingan be compiled into CSS. 
-					LESS to generate selectors from declared logical operations. 
-					LESS is a Learner Style Sheet  , it is a dynamic preprocessor language that can be compiled into CSS. 
-				</p>
-				<p>
-				Logic Gate are basic building block of any digital system . It is an electronic circuit having having one or more input and only one output. the relationship between them is based on certain logic.
-			We are going to study about three gates viz.AND , OR , XOR.
-			</p>
+					LGS is an experiment demonstrating the power of CSS selectors. Using LESS, logical operations can be declared and compiled into CSS selectors. LESS is a Learner Style Sheet, which is a dynamic preprocessor language that can be compiled into CSS.</p>
+
+				<p>Logic gates are the basic building blocks of any digital system. They are electronic circuits that have one or more inputs and only one output. The relationship between them is based on certain logic. We are going to study three gates: AND, OR, and XOR.</p>
+			
 			</div>
 		</section>
 	</nav>
