Edit XOR gate paragraph (punctuation, unnecessary pascal case, length and drafting

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 		            <section>
 					<div class= "ShrinkWrap">
 					 <p>
-					 A <b>XOR Gate</b> , Sometimes Pronounced As EX-OR is known as Exclusive OR Gate. It gives HIGH input i.e "1" when the inputs are odd , 
-					 if both the inputs are "0" i.e LOW or both the inputs are "1" e HIGH It gives False Output (0). XOR represents inequality function i.e the outputs is true if both inputs are'nt alike otherwise the output is false.
-					A way to remember <b> "XOR must have one or the other but not both" </b> 
+					 A <b>XOR Gate</b> (also known as <b>EXOR</b> and pronounced as <b>Exclusive OR</b>) is a logic gate that outputs true (1 or HIGH) when the number of true inputs is odd.
+					 That means that if both inputs are false (O/LOW) or both are true, a false output results, thus representing the inequality function.
+					A way to remember XOR is: <b>"must have one or the other but not both"</b>.
 					</p>
 						
 						<div class="Canvas" style="width: 9rem; height: 17rem;">
