Fix typo in line 175

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					<div class= "ShrinkWrap">
 					 <p>
 					 A <b>XOR Gate</b> (also known as <b>EXOR</b> and pronounced as <b>Exclusive OR</b>) is a logic gate that outputs true (1 or HIGH) when the number of true inputs is odd.
-					 That means that if both inputs are false (O/LOW) or both are true, a false output results, thus representing the inequality function.
+					 That means that if both inputs are false (0/LOW) or both are true, a false output results, thus representing the inequality function.
 					A way to remember XOR is: <b>"must have one or the other but not both"</b>.
 					</p>
 						
