--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>LGS &ndash; LOGIC GATES &amp; ADDERS!</title>
@@ -66,7 +66,7 @@
 							border : 1px solid black;
 							}
 							</style>
-					        <h2>  <b> <mark> TRUTHTABLE </mark> </b> </h2>
+					        <h2>  Truth Table </h2>
 		            <table align = "right">
 				            <tr>
 					          <th>A</th>
@@ -138,7 +138,7 @@
 							border : 1px solid black;
 							}
 							</style>
-					        <h2>  <b> <mark> TRUTHTABLE </mark> </b> </h2>
+					        <h2>  Truth Table </h2>
 		                   <table>
 				            <tr>
 					          <th>A</th>
@@ -221,7 +221,7 @@
 							text-align : center;
 							} 
 							</style>
-					        <h2>  <b> <mark> TRUTHTABLE </mark> </b> </h2>
+					        <h2>  Truth Table </h2>
 		                   <table>
 				            <tr>
 					          <th>A</th>
@@ -312,7 +312,7 @@
 							text-align : center;
 							} 
 							</style>
-					        <h2>  <b> <mark> TRUTHTABLE </mark> </b> </h2>
+					        <h2>  Truth Table </h2>
 		                   <table>
 				            <tr>
 							    <th>A</th>
@@ -459,7 +459,7 @@
 							text-align : center;
 							} 
 							</style>
-					        <h2>  <b> <mark> TRUTHTABLE </mark> </b> </h2>
+					        <h2>  Truth Table </h2>
 		                   <table>
 				            <tr>
 							    <th>A</th>
